# federated_model_optimization

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.cursor/rules/: refactor-code.mdc
src/: __init__.py  config.py  data_utils.py  evaluation.py  federated_training.py  main.py  model_definition.py
