[project]
name = "federated-model-optimization"
version = "0.1.0"
description = "A federated learning framework for optimizing building energy consumption prediction models"
readme = "README.md"
requires-python = ">=3.7.0"
dependencies = [
    "protobuf==3.20.0",
    "tensorflow==1.15.0",
    "tensorflow-federated>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
