[project]
name = "federated-model-optimization"
version = "0.1.0"
description = "A federated learning framework for optimizing building energy consumption prediction models"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "pandas>=2.1.0",
    "tensorflow==2.14.0",
    "tensorflow-federated>=0.87.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
